# fatigue

./: .gitignore  CHANGELOG.md  README.md  TODO.md  VERSIONING.md  check_tf.py  create_tflite_model.py  install.bat  install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  step_one.md  step_two.md  system_lvl_installed_tf_libs_list.md
docs/: requirements.txt
docs/source/: conf.py  index.rst  introduction.rst  versioning.rst
models/: FaceDetectorQuantizable.tflite  MediaPipeFaceLandmarkDetector.tflite  optimized.tflite
src/: config.py  fatigue_detection_app.py
src/core/detection/: analyzer.py
tests/: test_core.py
