[metadata]
name = fatigue_detection
version = file: VERSION
description = Fatigue Detection Application
long_description = file: README.md
long_description_content_type = text/markdown
author = Development Team

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --cov=src --cov-report=xml --cov-report=term

[coverage:run]
source = src
omit = tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html